Stop parallax on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,14 +113,12 @@ section>div {
 .parallax {
     display: flex;
     align-items: center;
-    /* justify-content: center; */
     vertical-align: middle;
     width: 100%;
     height: 100vh;
     background-image: url(/images/pinto_cropped2.png);
     background-size: cover;
     background-position: 45%;
-    background-attachment: fixed;
     background-repeat: no-repeat;
     overflow: hidden;
     margin: -5px 0 0 0;
@@ -435,6 +433,9 @@ footer a {
         left: 20px;
         bottom: 170px;
     }
+    body section {
+        padding: 0 20px;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -480,5 +481,8 @@ footer a {
     }
     nav .navbar-toggle {
         display: none;
+    }
+    .parallax {
+        background-attachment: fixed;
     }
 }
